@startuml
'https://plantuml.com/class-diagram

left to right direction

class Contract {
  object_id : Объект
  subject_id : Подобъект
  depart_id : Направление
  customer_id : Заказчик
  shipper_id : Поставщик
  payer_id : Плательщик
  bank_id : Банк
  Номер_договора
  Дата_договора
  Сумма_договора
}

class Object {
  id
}

class Сustomer {
  id
}

class Shipper {
  id
}

Contract::object_id --* Object::id
Contract::customer_id --* Сustomer::id
Contract::shipper_id --* Shipper::id

@enduml
